[package]
name = "ccf-core"
version = "0.1.4"
edition = "2021"
rust-version = "1.75"
license = "BUSL-1.1"
description = "Contextual Coherence Fields — earned relational trust for autonomous systems. Patent pending US 63/988,438."
repository = "https://github.com/Hulupeep/ccf-core"
homepage = "https://theshyrobot.com"
documentation = "https://docs.rs/ccf-core"
authors = ["Flout Labs <cbyrne@floutlabs.com>"]
readme = "README.md"
keywords = ["robotics", "trust", "coherence", "embedded", "no-std"]
categories = ["embedded", "no-std", "science::robotics"]

[features]
default = []
std = []
serde = ["dep:serde"]
python-ffi = ["dep:pyo3", "std"]

[dependencies]
hashbrown = { version = "0.14", default-features = false, features = ["ahash"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = "z"   # size-optimised for embedded
